--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@ h2{text-align:center;color:#0a7cff}
 
 <!-- produtos banheiro -->
   <div class="produto">
-<img src="img/sabonete-liquido-dove.jpg">
-<h3>Sabonete Líquido Dove</h3>
+<img src="img/papel-higienico.jpg">
+<h3>Papel Higiênico</h3>
 <div class="variacoes">
   <div class="linha">
     <span>1L — R$ 12,00</span>
-    <button onclick="addProduto('Sabonete Dove 1L',12)">Adicionar</button>
+    <button onclick="addProduto('Papel Higiênico',12)">Adicionar</button>
   </div>
 </div>
 </div>
@@ -169,7 +169,21 @@ h2{text-align:center;color:#0a7cff}
   </div>
 </div>
 </div>
- 
+
+ <div class="produto">
+<img src="img/sabao-liquido-clineza.jpg">
+<h3>Sabao Liquido Clineza</h3>
+<div class="variacoes">
+  <div class="linha">
+    <span>1L — R$ 13,00</span>
+    <button onclick="addProduto('Sabao Liquido Clineza 1L',12)">Adicionar</button>
+  </div>
+  <div class="linha">
+    <span>5L — R$ 27,00</span>
+    <button onclick="addProduto('Sabao Liquido Clineza 5L',35)">Adicionar</button>
+  </div>
+</div>
+</div>
  
 <div class="produto">
 <img src="img/sabao-de-coco.jpg">
@@ -226,16 +240,12 @@ h2{text-align:center;color:#0a7cff}
  
 <!-- produtos casa -->
  <div class="produto">
-<img src="img/detergente-concentrado.jpg">
-<h3>Detergente Concentrado</h3>
+<img src="img/papel-toalha.jpg">
+<h3>Papel Toalha</h3>
 <div class="variacoes">
   <div class="linha">
-    <span>2L — R$ 12,00</span>
-    <button onclick="addProduto('Detergente 2L',12)">Adicionar</button>
-  </div>
-  <div class="linha">
-    <span>5L — R$ 25,00</span>
-    <button onclick="addProduto('Detergente 5L',25)">Adicionar</button>
+    <span>2L — R$ 17,00</span>
+    <button onclick="addProduto('Papel Toalha',12)">Adicionar</button>
   </div>
 </div>
 </div>
