--- a/index.html
+++ b/index.html
@@ -376,8 +376,8 @@ h2{text-align:center;color:#0a7cff}
 <h3>Panela Antiaderente</h3>
 <div class="variacoes">
   <div class="linha">
-    <span> R$ ??</span>
-    <button onclick="addProduto('Panela Antiaderente',17)">Adicionar</button>
+    <span> R$ 55,00</span>
+    <button onclick="addProduto('Panela Antiaderente',55)">Adicionar</button>
   </div>
 </div>
 </div>
@@ -387,8 +387,8 @@ h2{text-align:center;color:#0a7cff}
 <h3>Porta Tempeiro 9 peças </h3>
 <div class="variacoes">
   <div class="linha">
-    <span> ??</span>
-    <button onclick="addProduto('Porta Tempeiro 9 Peças ',10)">Adicionar</button>
+    <span> R$ 50,00</span>
+    <button onclick="addProduto('Porta Tempeiro 9 Peças ',50)">Adicionar</button>
   </div>
 </div>
 </div>
