--- a/index.html
+++ b/index.html
@@ -250,12 +250,12 @@ h2{text-align:center;color:#0a7cff}
 <h3>Solupan</h3>
 <div class="variacoes">
   <div class="linha">
-    <span>2L — R$ ??</span>
-    <button onclick="addProduto('Solupan 2L',??)">Adicionar</button>
+    <span>1L — R$ 13,00</span>
+    <button onclick="addProduto('Solupan 1L',13)">Adicionar</button>
   </div>
   <div class="linha">
-    <span>5L — R$ ??</span>
-    <button onclick="addProduto('Solupan 5L',??)">Adicionar</button>
+    <span>5L — R$ 40,00</span>
+    <button onclick="addProduto('Solupan 5L',40)">Adicionar</button>
   </div>
 </div>
  </div>
@@ -265,12 +265,12 @@ h2{text-align:center;color:#0a7cff}
 <h3>Lava Canil</h3>
 <div class="variacoes">
   <div class="linha">
-    <span>2L — R$ ??</span>
-    <button onclick="addProduto('Lava Canil 2L',??)">Adicionar</button>
+    <span>2L — R$ 16,00</span>
+    <button onclick="addProduto('Lava Canil 2L',16)">Adicionar</button>
   </div>
   <div class="linha">
-    <span>5L — R$ ??</span>
-    <button onclick="addProduto('Lava Canil 5L',??)">Adicionar</button>
+    <span>5L — R$ 32,00</span>
+    <button onclick="addProduto('Lava Canil 5L',32)">Adicionar</button>
   </div>
 </div>
 </div>
@@ -280,12 +280,12 @@ h2{text-align:center;color:#0a7cff}
 <h3>Veja Bonrruque</h3>
 <div class="variacoes">
   <div class="linha">
-    <span>2L — R$ ??</span>
-    <button onclick="addProduto('Veja Bonrruque 2L',??)">Adicionar</button>
+    <span>2L — R$ 13,00</span>
+    <button onclick="addProduto('Veja Bonrruque 2L',13)">Adicionar</button>
   </div>
   <div class="linha">
-    <span>5L — R$ ??</span>
-    <button onclick="addProduto('Veja Bonrruque 5L',??)">Adicionar</button>
+    <span>5L — R$ 25,00</span>
+    <button onclick="addProduto('Veja Bonrruque 5L',25)">Adicionar</button>
   </div>
 </div>
 </div>
@@ -295,12 +295,12 @@ h2{text-align:center;color:#0a7cff}
 <h3>Pneu Pretinho</h3>
 <div class="variacoes">
   <div class="linha">
-    <span>1L — R$ ??</span>
-    <button onclick="addProduto('Pneu Pretinho 1L',??)">Adicionar</button>
+    <span>1L — R$ 13,00</span>
+    <button onclick="addProduto('Pneu Pretinho 1L',13)">Adicionar</button>
   </div>
   <div class="linha">
-    <span>5L — R$ ??</span>
-    <button onclick="addProduto('Pneu Pretinho 5L',??)">Adicionar</button>
+    <span>5L — R$ 40,0/</span>
+    <button onclick="addProduto('Pneu Pretinho 5L',40)">Adicionar</button>
   </div>
 </div>
 </div>
@@ -327,22 +327,22 @@ h2{text-align:center;color:#0a7cff}
   <div class="variacoes">
 
     <div class="linha">
-      <span>1L — R$ ??</span>
-      <button onclick="addProduto('Cloro em Gel 1L',6)">
+      <span>1L — R$ 9,00</span>
+      <button onclick="addProduto('Cloro em Gel 1L',9)">
         Adicionar
       </button>
     </div>
 
     <div class="linha">
-      <span>2L — R$ ??</span>
-      <button onclick="addProduto('Cloro em Gel 2L',10)">
+      <span>2L — R$ 16,00</span>
+      <button onclick="addProduto('Cloro em Gel 2L',16)">
         Adicionar
       </button>
     </div>
 
     <div class="linha">
-      <span>5L — R$ ??</span>
-      <button onclick="addProduto('Cloro em Gel 5L',20)">
+      <span>5L — R$ 32,00</span>
+      <button onclick="addProduto('Cloro em Gel 5L',32)">
         Adicionar
       </button>
     </div>
