--- a/index.html
+++ b/index.html
@@ -118,6 +118,17 @@ h2{text-align:center;color:#0a7cff}
 </div>
 
 <div class="produto">
+<img src="img/pedra-sanitaria.jpg">
+<h3>Pedra Sanitária</h3>
+<div class="variacoes">
+  <div class="linha">
+    <span> R$ 3,00</span>
+    <button onclick="addProduto('Pedra Sanitária',3)">Adicionar</button>
+  </div>
+</div>
+</div>
+ 
+<div class="produto">
 <img src="img/vassoura-de-vaso.jpg">
 <h3>Vassoura de Vaso</h3>
 <div class="variacoes">
@@ -220,8 +231,8 @@ h2{text-align:center;color:#0a7cff}
 <h3>Sabao Liquido Clineza</h3>
 <div class="variacoes">
   <div class="linha">
-    <span>1L — R$ 13,00</span>
-    <button onclick="addProduto('Sabao Liquido Clineza 1L',12)">Adicionar</button>
+    <span>2L — R$ 13,00</span>
+    <button onclick="addProduto('Sabao Liquido Clineza 2L',13)">Adicionar</button>
   </div>
   <div class="linha">
     <span>5L — R$ 27,00</span>
@@ -369,8 +380,8 @@ h2{text-align:center;color:#0a7cff}
 <h3>Percabonato</h3>
 <div class="variacoes">
   <div class="linha">
-    <span>R$ 26,00</span>
-    <button onclick="addProduto('Percabonato ',26)">Adicionar</button>
+    <span>R$ 25,00</span>
+    <button onclick="addProduto('Percabonato ',25)">Adicionar</button>
   </div>
 </div>
 </div>
@@ -396,6 +407,17 @@ h2{text-align:center;color:#0a7cff}
   </div>
 </div>
 </div>
+
+<div class="produto">
+<img src="img/kit-banho-cachorro.jpg">
+<h3>Kit Banho Para Cachorro</h3>
+<div class="variacoes">
+  <div class="linha">
+    <span> R$ 50,00</span>
+    <button onclick="addProduto('Kit Banho Para Cachorro',50)">Adicionar</button>
+  </div>
+</div>
+</div>
  
 </div>
 </div>
@@ -406,13 +428,91 @@ h2{text-align:center;color:#0a7cff}
 <div class="produtos">
  
 <!-- produtos casa -->
- <div class="produto">
+<div class="produto">
 <img src="img/papel-toalha.jpg">
 <h3>Papel Toalha</h3>
 <div class="variacoes">
   <div class="linha">
-    <span> R$ 17,00</span>
-    <button onclick="addProduto('Papel Toalha',17)">Adicionar</button>
+    <span> R$ 18,00</span>
+    <button onclick="addProduto('Papel Toalha',18)">Adicionar</button>
+  </div>
+</div>
+</div> 
+
+<div class="produto">
+<img src="img/luvas-m.jpg">
+<h3>Luvas M</h3>
+<div class="variacoes">
+  <div class="linha">
+    <span> R$ 9,00</span>
+    <button onclick="addProduto('Luvas M,',9)">Adicionar</button>
+  </div>
+</div>
+</div>
+
+<div class="produto">
+<img src="img/diabo-verde.jpg">
+<h3>Limpa Forno Diabo Verde</h3>
+<div class="variacoes">
+  <div class="linha">
+    <span> R$ 23,00</span>
+    <button onclick="addProduto('Limpa Forno Diabo Verde',23)">Adicionar</button>
+  </div>
+</div>
+</div>
+ 
+<div class="produto">
+<img src="img/limpa-forno.jpg">
+<h3>Limpa Forno Spray</h3>
+<div class="variacoes">
+  <div class="linha">
+    <span> R$ 25,00</span>
+    <button onclick="addProduto('Limpa Forno Spray',25)">Adicionar</button>
+  </div>
+</div>
+</div>
+
+<div class="produto">
+<img src="img/perflex-5.jpg">
+<h3>Perflex 5 Unidades</h3>
+<div class="variacoes">
+  <div class="linha">
+    <span> R$ 5,00</span>
+    <button onclick="addProduto('Perflex 5 Unidades',5)">Adicionar</button>
+  </div>
+</div>
+</div>
+
+<div class="produto">
+<img src="img/perflex-25.jpg">
+<h3>Perflex 25 Unidades</h3>
+<div class="variacoes">
+  <div class="linha">
+    <span> R$ 18,00</span>
+    <button onclick="addProduto('Perflex 25 Unidades',18)">Adicionar</button>
+  </div>
+</div>
+</div>
+
+<div class="produto">
+<img src="img/pano-multiuso.jpg">
+<h3>Panos Multiuso 2 Uni.</h3>
+<div class="variacoes">
+  <div class="linha">
+    <span> R$ 10,00</span>
+    <button onclick="addProduto('Panos Multiuso 2 Uni.',10)">Adicionar</button>
+  </div>
+</div>
+</div>
+
+
+<div class="produto">
+<img src="img/porta-detergente.jpg">
+<h3>Porta Detergente</h3>
+<div class="variacoes">
+  <div class="linha">
+    <span> R$ 15,00</span>
+    <button onclick="addProduto('Porta Detergente',15)">Adicionar</button>
   </div>
 </div>
 </div>
@@ -473,6 +573,17 @@ h2{text-align:center;color:#0a7cff}
 </div>
 
 <div class="produto">
+<img src="img/kit-para-crianca.jpg">
+<h3>Kit para Crianças Vassoura, Rodo e pá</h3>
+<div class="variacoes">
+  <div class="linha">
+    <span> R$ 35,00</span>
+    <button onclick="addProduto('kit Para Criança Vassoura, Rodo e Pá',35)">Adicionar</button>
+  </div>
+</div>
+</div>
+
+<div class="produto">
 <img src="img/vassoura-de-canto.jpg">
 <h3>Vassoura de Canto</h3>
 <div class="variacoes">
@@ -482,7 +593,84 @@ h2{text-align:center;color:#0a7cff}
   </div>
 </div>
 </div>
- 
+
+<div class="produto">
+<img src="img/carrinho-multiuso.jpg">
+<h3>Carrinho Multiuso</h3>
+<div class="variacoes">
+  <div class="linha">
+    <span> R$ 80,00</span>
+    <button onclick="addProduto('Carrinho Multiuso',80)">Adicionar</button>
+  </div>
+</div>
+</div>
+
+<div class="produto">
+<img src="img/mop.jpg">
+<h3>Mop Giratorio</h3>
+<div class="variacoes">
+  <div class="linha">
+    <span> R$ 75,00</span>
+    <button onclick="addProduto('Mop Giratorio',75)">Adicionar</button>
+  </div>
+</div>
+</div>
+
+<div class="produto">
+<img src="img/varal-de-chao.jpg">
+<h3>Varal de Chão com Abas</h3>
+<div class="variacoes">
+  <div class="linha">
+    <span> R$ 135,00</span>
+    <button onclick="addProduto('Varal de Chão com Abas',135)">Adicionar</button>
+  </div>
+</div>
+</div>
+
+<div class="produto">
+<img src="img/cesto-60.jpg">
+<h3>Cesto de Roupa 60 LTS</h3>
+<div class="variacoes">
+  <div class="linha">
+    <span> R$ 40,00</span>
+    <button onclick="addProduto('Cesto de Roupa 60 LTS',40)">Adicionar</button>
+  </div>
+</div>
+</div>
+
+<div class="produto">
+<img src="img/lixeira-9.jpg">
+<h3>Lixeira 9 LTS</h3>
+<div class="variacoes">
+  <div class="linha">
+    <span> R$ 30,00</span>
+    <button onclick="addProduto('Lixeira 9 LTS',30)">Adicionar</button>
+  </div>
+</div>
+</div>
+
+<div class="produto">
+<img src="img/lixeira-suporte.jpg">
+<h3>lixeira com Suporte para Pendurar</h3>
+<div class="variacoes">
+  <div class="linha">
+    <span> R$ 50,00</span>
+    <button onclick="addProduto('Lixeira com Suporte para Pendurar',50)">Adicionar</button>
+  </div>
+</div>
+</div>
+
+<div class="produto">
+<img src="img/lixeira-12.jpg">
+<h3>Lixeira 12 LTS</h3>
+<div class="variacoes">
+  <div class="linha">
+    <span> R$ 30,00</span>
+    <button onclick="addProduto('Lixeira 12 LTS',30)">Adicionar</button>
+  </div>
+</div>
+</div>
+
 </div>
 </div>
 
@@ -490,7 +678,7 @@ h2{text-align:center;color:#0a7cff}
 <h2>Automotivo</h2>
 <div class="produtos">
 
-<<div class="produto">
+<div class="produto">
 <img src="img/cheirinho-uva.jpg">
 <h3>Cheirinho de Uva</h3>
 <div class="variacoes">
@@ -529,6 +717,17 @@ h2{text-align:center;color:#0a7cff}
       <button onclick="addProduto('Solupan 5L',40)">Adicionar</button>
     </div>
   </div>
+</div>
+
+<div class="produto">
+<img src="img/microfibra.jpg">
+<h3>Kit Pano Microfibra 4 Uni.</h3>
+<div class="variacoes">
+  <div class="linha">
+    <span> R$ 22,00</span>
+    <button onclick="addProduto('kit Pano Microfibra 4 Uni.',22)">Adicionar</button>
+  </div>
+</div>
 </div>
 
 </div>
