--- a/index.html
+++ b/index.html
@@ -343,21 +343,6 @@ h2{text-align:center;color:#0a7cff}
 </div>
  
 <div class="produto">
-<img src="img/candida.jpg">
-<h3>Cândida</h3>
-<div class="variacoes">
-  <div class="linha">
-    <span>2L — R$ 6,00</span>
-    <button onclick="addProduto('Cândida 2L',6)">Adicionar</button>
-  </div>
-  <div class="linha">
-    <span>5L — R$ 12,00</span>
-    <button onclick="addProduto('Cândida 5L',12)">Adicionar</button>
-  </div>
-</div>
-</div>
- 
-<div class="produto">
   <img src="img/cloro-em-gel.jpg">
   <h3>Cloro em Gel</h3>
 
@@ -386,6 +371,62 @@ h2{text-align:center;color:#0a7cff}
   </div>
 </div>
 
+  <img src="img/desengordurante.jpg">
+  <h3>Desengordurante</h3>
+
+  <div class="variacoes">
+
+    <div class="linha">
+      <span>1L — R$ 12,00</span>
+      <button onclick="addProduto('Desengordurante 1L',12)">
+        Adicionar
+      </button>
+    </div>
+
+    <div class="linha">
+      <span>2L — R$ 22,00</span>
+      <button onclick="addProduto('Desengordurante 2L',22)">
+        Adicionar
+      </button>
+    </div>
+
+    <div class="linha">
+      <span>5L — R$ 40,00</span>
+      <button onclick="addProduto('Desengordurante 5L',40)">
+        Adicionar
+      </button>
+    </div>
+  </div>
+</div>
+ 
+  <img src="img/alcool-perfumado.jpg">
+  <h3>Álcool Perfumado</h3>
+
+  <div class="variacoes">
+
+    <div class="linha">
+      <span>Álcool Perf. Transparente 2L - R$ 10,00</span>
+      <button onclick="addProduto('Álcool Perf. Transparente 2L',10)">
+        Adicionar
+      </button>
+    </div>
+
+    <div class="linha">
+      <span>2L — R$ 10,00</span>
+      <button onclick="addProduto('Álcool Perfumado 2L',10)">
+        Adicionar
+      </button>
+    </div>
+
+    <div class="linha">
+      <span>5L — R$ 23,00</span>
+      <button onclick="addProduto('Álcool Perfumado 5L',23)">
+        Adicionar
+      </button>
+    </div>
+  </div>
+</div>
+ 
 <div class="produto">
 <img src="img/percabonato.jpg">
 <h3>Percabonato</h3>
@@ -439,6 +480,21 @@ h2{text-align:center;color:#0a7cff}
 <div class="produtos">
  
 <!-- produtos casa -->
+<div class="produto">
+<img src="img/sabao-em-po.jpg">
+<h3>Sabão em Pó</h3>
+<div class="variacoes">
+  <div class="linha">
+    <span> Omo R$ 16,00</span>
+    <button onclick="addProduto('Sabão Omo',16)">Adicionar</button>
+  </div>
+  <div class="linha">
+    <span> Brilhante R$ 13,00</span>
+    <button onclick="addProduto('Sabão Brilhante',13)">Adicionar</button>
+  </div>
+</div>
+</div>
+ 
 <div class="produto">
 <img src="img/papel-toalha.jpg">
 <h3>Papel Toalha</h3>
@@ -548,8 +604,8 @@ h2{text-align:center;color:#0a7cff}
     <button onclick="addProduto('Porta Tempeiro 9 Peças ',50)">Adicionar</button>
   </div>
 </div>
-</div>
-
+</div> 
+ 
 <div class="produto">
 <img src="img/chaleira.jpg">
 <h3>Chaleira</h3>
