--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@ h2{text-align:center;color:#0a7cff}
   <button onclick="mostrarCategoria('limpeza',this)">Produtos de Limpeza</button>
   <button onclick="mostrarCategoria('casa',this)">Casa</button>
   <button onclick="mostrarCategoria('automotivo',this)">Automotivo</button>
+  <button onclick="mostrarCategoria('essencias',this)">Essências</button>
 </div>
 
 <div class="container">
@@ -741,6 +742,42 @@ h2{text-align:center;color:#0a7cff}
 </div>
 </div>
 
+<div class="categoria" id="essencias" style="display:none;">
+  <h2>Essências</h2>
+
+  <div class="produto">
+<img src="img/essencia-lavanda.jpg">
+<h3>Essência Lavanda</h3>
+<div class="variacoes">
+  <div class="linha">
+    <span> Senalândia R$ ??</span>
+    <button onclick="addProduto('Essência Lavanda Senalândia',??)">Adicionar</button>
+  </div>
+  <div class="linha">
+    <span> Senamax R$ ??</span>
+    <button onclick="addProduto('Essência Lavanda Senamax',??)">Adicionar</button>
+  </div>
+</div>
+</div>
+
+  <div class="produto">
+<img src="img/essencia-eucalipto.jpg">
+<h3>Essência Eucalipto</h3>
+<div class="variacoes">
+  <div class="linha">
+    <span> Senalândia R$ ??</span>
+    <button onclick="addProduto('Essência Eucalipto Senalândia',??)">Adicionar</button>
+  </div>
+  <div class="linha">
+    <span> Senamax R$ ??</span>
+    <button onclick="addProduto('Essência Eucalipto Senamax',??)">Adicionar</button>
+  </div>
+</div>
+p</div>
+
+</div>
+</div>
+ 
  <div id="automotivo" class="categoria">
 <h2>Automotivo</h2>
 <div class="produtos">
@@ -774,7 +811,7 @@ h2{text-align:center;color:#0a7cff}
 <div class="produto">
   <img src="img/solupan.jpg">
   <h3>Solupan</h3>
-  <div class="variacoes">
+ <div class="variacoes">
     <div class="linha">
       <span>1L — R$ 13,00</span>
       <button onclick="addProduto('Solupan 1L',13)">Adicionar</button>
